# the-house-reloaded

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup_db.py
static/: dark-theme.css  general.css  light-theme.css
templates/: 400.html  401.html  403.html  404.html  405.html  500.html  about.html  base.html  delete-category.html  delete-post.html  delete-thread.html  delete-user.html  index.html  login.html  new-category.html  new-post.html  new-thread.html  settings.html  toggle-mod.html  view-category.html  view-post.html  view-thread.html  view-user.html
thehouse/: __init__.py  api_routes.py  before_request_callbacks.py  config.py  error_handlers.py  extensions.py  forms.py  models.py  routes.py  schemas.py  user_callbacks.py  utils.py
thehouse/templates/: 401.html  404.html  about.html  base.html  delete-category.html  delete-post.html  delete-thread.html  delete-user.html  inbox.html  index.html  login.html  manage-token.html  new-category.html  new-post.html  new-thread.html  settings.html  toggle-mod.html  view-category.html  view-thread.html  view-user.html
